--- a/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/3_Analyzing_Climate_Trends.Rnw
@@ -4,7 +4,6 @@
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
-    hyperindex=true,
     linkcolor=red,
     filecolor=magenta,
     urlcolor=purple,
@@ -13,7 +12,7 @@
 
 \title{Analyzing Climate Trends}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.29)} 
+\date{\today~(ver. 0.40)} 
 
 \begin{document}
 \maketitle
@@ -22,7 +21,7 @@
 
 \subsection{Goals}
 
-We will use basic linear regression models, i.e. the lm() function to determine if there are trends in the data.
+We will use basic linear regression models, i.e. the lm() function to determine if there are trends in the data. We will also consider the possibility of non-linear trends, but we will start with the simplest approach. We will evaluate data for extreme events, i.e. the tails of the distribution, and we will also consider the possibility of changes in the distribution over time and records "highs", "lows" and precipitation, and drought. 
 
 \subsection{Weather vs. Climate}
 
@@ -37,11 +36,17 @@ We need to address several things that might get in the way of our analysis:
 \begin{enumerate}
   \item Determine if there are trends by months
   \item Determine if there if trends are more common in recent years
-  \item Evaluate distirbution changes by decade / score
+  \item Evaluate distribution changes by decade / score
   \item Evaluate extreme events
 \end{enumerate}
 
-\section{Functions to Analyze Monthly Trends}
+In contrast to Guide 1 and 2, I couldn't separate the explanation of code from the code and statistical analysis. If you have suggestions of how to stream line this, I am all ears!
+
+
+
+\subsection{R Code with Custom Functions}
+
+Run the \href{https://github.com/marclos/RTricks/blob/master/04_Regional_Climate_Trends/Guides/Guide3.R}{Guide3.R} code and the functions will be loaded into your environment automatically and are designed to help you analyze your statio data. 
 
 <<setup, echo=FALSE, results='hide', message=FALSE>>=
 datafolder = "/home/mwl04747/RTricks/04_Regional_Climate_Trends/Data/SP24/"
@@ -50,58 +55,51 @@ library(here)
 source(here("04_Regional_Climate_Trends", "Guides", "Guide3.R"))
 @
 
+As we get further into the project, these code chunks may require tweaking because of the questions you are interested for your location falls outside the design of the custom functions. Please let Marc or the mentors know to get assistance tweaking the code!
+
 \subsection{Before Starting the Process}
 
-Before you begin, make sure you have the stations to read into R. Loot at the R eneivornment to see that the stations have been loaded in to R. If not, please Slack Marc and mentors, so we help you get these files into the R environment, which might mean running the previous guide again. 
+Before you begin, make sure you have the stations to read into R. Look at the R environment to see that the stations have been loaded in to R. If not, please Slack Marc and mentors, so we help you get these files into the R environment, which might mean running the previous guide again. 
 
-\subsection{R Code with Custom Functions}
-
-Run the \href{https://github.com/marclos/RTricks/blob/master/04_Regional_Climate_Trends/Guides/Guide3.R}{Guide3.R} code and the functions will be loaded into your environment automatically.
-
-As we get futhrer into the project, these code chunks may require tweaking because of the questions you are interested in your location. Marc and the mentors will help you with this.
-
-\subsection{Function Descriptions and Use}
-
-The following functions are used to read the weather stations data into R, clean and pre-process data so we can analyze the data with the next guide.
-
-\subsection{Reading csv and loading R.data}
+\subsubsection{Reading csv and loading R.data}
 
 \begin{description}
 
-  \item[Read and Load Data] This function will read the csv files and load the data into R. The function will also return a list of dataframes.
+\item[Read and Load Data] This function will read the csv files and load the data into R. The function will also return a list of dataframes.
   
 <<read_and_load_data.fun, echo=FALSE>>=
 print(read_and_load_data.fun)
 @
 
-end{description}
+\end{description}
 
-\subsection{Function to Evaluate Trends by Month}
+
+\section{Analyzing Monthly Trends}
+
+In this section, we'll discuss how we might analyze the trends in the data by month. In other words, is there a trend in January, February, March, etc. Moreover, we might find the trends differ dramatically between months. 
 
 \begin{description}
 
-  \item[Analyze Stations for Trends by Month] This function will take the list of dataframes and return a list of linear models for each month. The function will also return a summary of the linear models.
+\item[Analyze Stations for Trends by Month] This function will take the list of dataframes and return a list of linear models for each month. The function will also return a summary of the linear models.
 
 <<show_monthlyTrend.fun, echo=FALSE>>=
 print(monthlyTrend.fun)
 @
 
-\item[Example of how to use the function]
+\item[Example of how to use the function] Here's an example using the list of station dataframes anomalies.
 
 <<echo=TRUE, results='hide'>>=
 USC00042294.trends <- monthlyTrend.fun(USC00042294.anomalies)
 @
 
-\item[Explore Results] bwzr
+\item[Explore Results] Table~\ref{tab:TMAXtrends} summarizes the monthly trends for TMAX. Admittedly, determining the months with the biggest changes isn't a very good approach for hypothesize testing -- it's more like a fishing expedition, but as long as we understand the difference between an a priori hypothesis and an exploratory analysis, we should be okay if we make appropriate conclusions. 
 
-Table %~\ref{tab:TMAXtrends} 
-summarizes the monthly trends for TMAX. Admittedly, determining the months with the biggest changes isn't a very good approach for hypothesize testing -- it's more like a fishing expedition, but as long as we understand the difference between an a priori hypothesis and an exploratory analysis, we should be okay if we make appropriate conclusions. 
+We would want to evaluate the trends for TMIN and PRCP too!
 
 \end{description}
 
-<<echo=FALSE, results='asis'>>=
-xtable(USC00042294.trends[USC00042294.trends$ELEMENT=="TMAX",],
-       caption="TMAX Trends")
+<<echo=FALSE, results='asis', fig.cap="TMAX Trends X">>=
+xtable(USC00042294.trends[USC00042294.trends$ELEMENT=="TMAX",], caption = "TMAX Trends", label="tab:TMAXtrends")
 # print command?
 #c(1,7,4:6)], digits=c(0,0,4,2,4,3), caption="TMIN Trends"
 # print(TMAX.xtbl)
@@ -111,10 +109,12 @@ xtable(USC00042294.trends[USC00042294.trends$ELEMENT=="TMAX",],
 
 \subsubsection{Example of Loop Code from Provious Interation}
 
+In case your data downloaded as Montly data, here's the code I used two years ago before the rNOAA library started failing. 
+
 Station data frames were called GSOM (Monthly data). See if you can interpret each of the steps. Evaluate both TMAX and TMIN in GSOM by Year using MonthEvalStats() function. 
 
 <<AlternativeLoopFunction, eval=TRUE, echo=FALSE>>=
-print(MonthEvalStats.fun
+print(MonthEvalStats.fun)
 @
 
 
@@ -124,7 +124,9 @@ There are several ways to filter out seasonal effects. The easiest way is subtra
 
 \subsubsection{Method 1: Filtering by Monthly Mean} 
 
-<<GSOM_Anomaly, eval=FALSE>>=
+One way of doing this is creating a matrix of values for each month and then subtracting the mean value for each month, for the whole record, not just the 1960-1990 ``normals". If this is of interest, we can help you with this.
+
+<<GSOM_Anomaly, eval=FALSE, echo=FALSE>>=
 TMAX.Monthly.means = aggregate(TMAX~Month, data=GSOM, mean)
 names(TMAX.Monthly.means)=c("Month", "TMAXmean")
 GSOM2 = merge(GSOM, TMAX.Monthly.means, by="Month")
@@ -144,7 +146,7 @@ GSOM2$PPT.anom = GSOM2$PPT - GSOM2$PPTmean
 GSOM2 <- GSOM2[order(GSOM2$Date),]
 @
 
-<<eval=FALSE>>=
+<<eval=FALSE, echo=FALSE>>=
 GSOM_anomaly_1975.png = paste0(fips$State2, "_", stid, "_GSOM_anomaly_1975.png")
 
 png(paste0(png_private, GSOM_anomaly_1975.png), 
@@ -197,17 +199,17 @@ text(pred_dates$Date[location_index], ymax2,
 dev.off()
 @
 
-And to see what we created, see Figure~\ref{fig:GSOM-anomaly}.
+%And to see what we created, see Figure~\ref{fig:GSOM-anomaly}.
 
-\begin{figure}
+%\begin{figure}
 %\includegraphics[width=1.00\textwidth]{\Sexpr{paste0(png_private, GSOM_anomaly_1975.png)}}
-\caption{The changing in monthly temperature data.}
-\label{fig:GSOM-anomaly}
-\end{figure}
+%\caption{The changing in monthly temperature data.}
+%\label{fig:GSOM-anomaly}
+%\end{figure}
 
 \subsubsection{Method 2: Polynomial Filter}
 
-Project to be followed up with.
+Another method is to use a polynomial filter. Perhaps, someday, I'll work on this. Great student project to be followed up with.
 
 <<polynomial, eval=FALSE, echo=TRUE>>=
 # fit polynomial: x^2*b1 + x*b2 + ... + bn
@@ -232,16 +234,17 @@ Rainfall trends are tough. Exteme events can occur in 24 hours or over long peri
 
 We can look for trends in monthly averages, number of days without rain (important in tropics), and/or extreme events based on daily or hourly data. 
 
-I don't know of a robust way to look at this for the entire globe. 
+In addition, the definition of extreme events is highly regionaally specific. Thus, if this is of interest, let us know and we'll help you develop code!
 
-<<eval=FALSE>>=
+
+<<eval=FALSE, echo=FALSE>>=
 PRCP.Total = aggregate(PRCP~Year, data=CHCND, sum, na.rm=T)
 PRCP.Season.Total = aggregate(PRCP~Season+Year, data=CHCND, sum, na.rm=T)
 @
 
 Rainfall totals by season might be a useful way to think about changes, because the rainfall is often seasonal, I wonder if we can see pattners by season. 
 
-<<warning=FALSE, eval=FALSE>>=
+<<warning=FALSE, eval=FALSE, echo=FALSE>>=
 ggplot( ) +
    geom_bar(data = PRCP.Season.Total, 
       aes(x=Year, y=PRCP, fill=Season), stat="identity") + 
@@ -258,36 +261,26 @@ ggplot( ) +
 
 Days without rain...within a calendar year... bleed over between years isn't captured.. This is screwed up, Drought.run needs work.
 
-<<eval=FALSE>>=
-CHCND$PRCP.count = sequence(rle(CHCND$PRCP)$lengths)
-Drought.run.temp <- data.frame(Year = NA, lengths=NA, values=NA)
-for(i in min(CHCND$Year):max(CHCND$Year)){
-   # print(i)
-   run.length = rle(CHCND[CHCND$Year==i,]$PRCP)
-   run.length.df = data.frame(Year = rep(i, length(run.length$values)), 
-         lengths = run.length$lengths,
-         values = run.length$values)
-   
-   Drought.run.temp <- rbind(Drought.run.temp, 
-         run.length.df[run.length.df$values==0,])
-}
-Drought.run <- Drought.run.temp[-1,]
-str(Drought.run)
-names(Drought.run)
+I am working on this the first week of Feb. More soon!
 
-# What is a drought 10 days, 20 days, 40 days?
 
-Drought.run.10 = aggregate(lengths~Year, 
-   data=Drought.run[Drought.run$lengths>=10,], sum)
-Drought.run.20 = aggregate(lengths~Year, 
-   data=Drought.run[Drought.run$lengths>=20,], sum)
-Drought.run.40 = aggregate(lengths~Year, 
-   data=Drought.run[Drought.run$lengths>=40,], sum)
 
-if(Drought.run$lengths>100) {
-   Drought.run.100 = aggregate(lengths~Year, 
-   data=Drought.run[Drought.run$lengths>=100,], sum)
-}
+<<show_droughtCount.fun, echo=FALSE>>=
+print(droughtCount.fun)
+@
+
+
+\begin{description}
+
+\item[Example of how to use the function] Here's an example using the list of station dataframes anomalies.
+
+<<echo=TRUE, eval=FALSE, results='hide'>>=
+USC00040693.drought <- droughtCount.fun(USC00040693, threshold=0.1)
+@
+
+\end{description}
+
+<<eval=FALSE, echo=FALSE>>=
 
 plot(lengths~Year, Drought.run.10, pch=20, cex=.5)
 points(lengths~Year, Drought.run.20, pch=20, col="blue", cex=.5)
@@ -315,7 +308,7 @@ text(min(Drought.run$Year, na.rm=T), max(Drought.run$lengths, na.rm=T),
 
 Rainfall Probability Distributions by decade... to be developed.
 
-<<eval=FALSE>>=
+<<eval=FALSE, echo=FALSE>>=
 CHCND$Decade <- floor_decade(CHCND$Year)
 
 PRCP.Decade <- aggregate(PRCP~Month+Decade, data=CHCND, sum)
@@ -329,7 +322,7 @@ points(xnew,df(xnew),col=2)
 
 @
 
-<<eval=FALSE>>=
+<<eval=FALSE, echo=FALSE>>=
 CHCND$Score <- floor_score(CHCND$Year)
 @
 
@@ -376,7 +369,7 @@ head(CHCND)
 
 This is a common way to communicate temperatures changes. I suspect we have a better sense of change when we notice "extreme" events...
 
-<<eval=FALSE>>=
+<<eval=FALSE, echo=FALSE>>=
 names(CHCND)
 
 minTMIN.length = aggregate(minTMIN~Year, data=CHCND, length)
@@ -419,7 +412,7 @@ ggplot( ) +
 I tried to use a for loop and in then statements and it was painfully slow, so I converted the data to a matrix that can be used by barplots with much more effeciency!
 
 Create the matrix
-<<CHCNDmatrix, eval=FALSE>>=
+<<CHCNDmatrix, eval=FALSE, echo=FALSE>>=
 library(lubridate)
 str(CHCND)
 
@@ -468,7 +461,7 @@ max(CHCND$yday[CHCND$Year==max(CHCND$Year)])
 @
 
 
-<<recordtemploop, eval=FALSE>>=
+<<recordtemploop, eval=FALSE, echo=FALSE>>=
 records.png = paste0(fips$State2, "_", stid, "_CHCND_Temp_Records.png")
 
 png(paste0(png_private, records.png), width = 480, height = 280, units = "px", pointsize = 12, bg = "white")
@@ -694,7 +687,7 @@ First, TMIN and TMAX and change point analysis...
 
 https://cran.r-project.org/web/packages/mcp/readme/README.html
 
-<<eval=FALSE>>=
+<<echo=FALSE, eval=FALSE>>=
 
 dyn.load('/opt/jags/4.3.1/lib/libjags.so.4')
 library(mcp)
@@ -831,11 +824,11 @@ text(pred_dates$Date[location_index], ci[location_index,3],
 dev.off()
 @
 
-\begin{figure}
+%\begin{figure}
 %\includegraphics[width=1.00\textwidth]{\Sexpr{paste0(png_private, KISS.png)}}
-\caption{Keep it simple stupid!}
-\label{fig:GSOM-KISS}
-\end{figure}
+%\caption{Keep it simple stupid!}
+%\label{fig:GSOM-KISS}
+%\end{figure}
 
 \subsection{Temp \& Precipitation Probability}
 
@@ -843,7 +836,7 @@ To highlight the patterns of change, it might be useful to analyze how the proba
 
 I started with decade bins, but used 20 years bins (scores) to simplify the graphics while keeping a pretty good temporal resolution.
 
-<<normalPDF, eval=FALSE>>=
+<<normalPDF, echo=FALSE, eval=FALSE>>=
 library(wesanderson)
 
 h.ramp <- rev(heat.colors(length(unique(GSOM2$Score))+1))[-1]
@@ -947,17 +940,17 @@ dev.off()
 
 This figure is pretty effective, but still needs work. 
 
-\begin{figure}
+%\begin{figure}
 %\includegraphics[width=1.00\textwidth]{\Sexpr{paste0(png_private, GSOM_dnorm.png)}}
-\caption{The changing in monthly temperature data, assuming a normal probability distribution.}
-\label{fig:GSOM_dnorm}
-\end{figure}
+%\caption{The changing in monthly temperature data, assuming a normal probability distribution.}
+%\label{fig:GSOM_dnorm}
+%\end{figure}
 
 \subsection{Using library densEstBayes}
 
 Now, I used a screen split to look at the distribution of the temperate anomolies. First, we look at a simple histogram of the entire dataset. 
 
-<<eval=FALSE>>=
+<<eval=FALSE, echo=FALSE,>>=
 par(mfrow=c(1,1))
 hist(GSOM2$TMIN.anom, col = "gold",
      main = "", probability = TRUE, 
@@ -968,7 +961,7 @@ The data center around zero, as expected, but are these normally distributed?
 
 %For TMAX there is a \Sexpr{round(shapiro.test(GSOM2$TMAX.anom)$p.value, 7)} probability that the distribution is the same as the normal distribution. For TMIN there is a \Sexpr{round(shapiro.test(GSOM2$TMIN.anom)$p.value, 7)} probability that the distribution is the same as the normal distribution. For PPT is a \Sexpr{round(shapiro.test(GSOM2$PPT.anom)$p.value, 7)} probability that the distribution is the same as the normal distribution.
 
-<<shapiro_test, eval=FALSE>>=
+<<shapiro_test,echo=FALSE,  eval=FALSE>>=
 if(shapiro.test(GSOM2$TMAX.anom)$p.value<.05 | 
    shapiro.test(GSOM2$TMIN.anom)$p.value<.05 | 
    shapiro.test(GSOM2$PPT.anom)$p.value<.05){
@@ -984,7 +977,7 @@ These values suggest that there is good reason
 
 Next we use a function to estimate the probability distribution using a markof chain the creates an estimated probability distribution. This doesn't always work when the distribution is not even and their only 10 years of data per slot. I suspect, I should make this by every 20 years. Plus that will go way faster and I think the data visualization will be more robust. 
 
-<<estDensity, warning=FALSE, results='hide', eval=FALSE>>=
+<<estDensity, echo=FALSE, warning=FALSE, results='hide', eval=FALSE>>=
 GSOM_estPDF.png = paste0(fips$State2, "_", stid, "_GSOM_estPDF.png")
 
 if(!file.exists(paste0(png_private, GSOM_estPDF.png))){
@@ -1075,19 +1068,16 @@ dev.off()
 
 The process to create these figures is very time consuming, so in general, I need to come up with an if then statement to avoid creating these everytime!
 
-\begin{figure}
+%\begin{figure}
 %\includegraphics[width=1.00\textwidth]{\Sexpr{paste0(png_private, GSOM_estPDF.png)}}
-\caption{The changing in monthly temperature data.}
-\label{fig:GSOM_estPDF}
-\end{figure}
+%\caption{The changing in monthly temperature data.}
+%\label{fig:GSOM_estPDF}
+%\end{figure}
 
-\section{Animated GIFs}
-
-So far, this creates a gif file, but I haven't been able get the gif in the pdf directly yet. I will need an additional package or create separate png that are combined. For now, we'll create a gif file to be used in separate documents.
 
 \subsection{Probability Distributions}
 
-<<animated_normalPDFs, results='hide', eval=FALSE>>=
+<<animated_normalPDFs, echo=FALSE, results='hide', eval=FALSE>>=
 
 GSOM_dnorm.gif = paste0(fips$State2, "_", stid, "_GSOM_dnorm.gif")
 
@@ -1184,7 +1174,7 @@ The file is saved in the main directory.
 
 \subsection{4 Weather Trend Plots}
 
-<<animate, results='hide', eval=FALSE>>=
+<<animate, echo=FALSE, results='hide', eval=FALSE>>=
 panel4.gif = paste0(fips$State2, "_", stid, "_4panel.gif")
 
 if(!file.exists(paste0(gif_private, panel4.gif))){
